# Taylor-SWFT

./: .gitignore  LICENSE  README.md  conda_env.yaml  demo.ipynb  demo_real_time.py  main.py  pyproject.toml
.github/workflows/: tests.yml
data/BRAS/: mesh_data.json  source_receiver_positions.json
src/taylor_swft/: __init__.py
src/taylor_swft/core/: __init__.py  taylor_swft.py
src/taylor_swft/evaluation/: __init__.py  evaluate.py  metrics.py  statistics.py
src/taylor_swft/realtime/: __init__.py  processor.py  real_time.py  threads.py
src/taylor_swft/room/: __init__.py  datasets.py  graphics.py  spatial_model.py
src/taylor_swft/synthesis/: __init__.py  rir_synthesizer.py
src/taylor_swft/utils/: baselines.py  constants.py  custom_typing.py  debug_plots.py  make_table.typ  utils.py
tests/: test_baselines.py  test_dataset.py  test_evaluate.py  test_graphics.py  test_real_time.py  test_rir_synth.py  test_spatial_model.py  test_stats.py  test_taylor_swft.py
