[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "taylor_swft"
version = "0.1.0"
dependencies = [
    "dtaidistance",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pyroomacoustics == 0.9.0",
    "scipy",
    "sounddevice",
    "soundfile",
    "torch",
    "torchaudio",
    "torchcodec",
    "tqdm",
    "trimesh",
    "typst",
]


[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = ["pytest", "jupyter"]
